# Computer-Graphics-and-Game-Dev

./: CMakeLists.txt  README.md  main.cpp
Dependencies/GLFW/: libglfw.so.3.3
Dependencies/GLUT/: libglut.so.3.12.0
src/: main.cpp
